--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@
 #---------------------------------------------------------------------
 name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
-  EB_PACKAGE_S3_BUCKET_NAME : "zzz.flask-app"
-  EB_APPLICATION_NAME       : "MyFlask"
-  EB_ENVIRONMENT_NAME       : "MyFlask-env"
+  EB_PACKAGE_S3_BUCKET_NAME : "vyashin-flask-app-packages"
+  EB_APPLICATION_NAME       : "FlaskWebApp"
+  EB_ENVIRONMENT_NAME       : "Flaskwebapp-env"
   DEPLOY_PACKAGE_NAME       : "flask-app-${{ github.sha }}.zip"
-  AWS_REGION_NAME           : "us-west-2"
+  AWS_REGION_NAME           : "eu-north-1"
 
 on: 
   push:
